css/layout.css
/**
 * Desktop Sizing:
 *
 * Title: 40
 * Title-Pre 24
 * Title-Post 30
 *
 * Header 40
 * subheader 20
 *
 * text 20
*/

:root {
  /**
   * Spacers
   * Assumes a root font size of 16px;
   *
   * https://tailwindcss.com/docs/customizing-spacing#default-spacing-scale
   */

  --s-0:  0px;
  --s-1:  0.25rem;  /* 4 px */
  --s-2:  0.5rem;   /* 8 px */
  --s-3:  0.75rem;  /* 12 px */
  --s-4:  1rem;     /* 16 px */
  --s-5:  1.25rem;  /* 20 px */
  --s-6:  1.5rem;   /* 24 px */
  --s-8:  2rem;     /* 32 px */
  --s-10: 2.5rem;   /* 40 px */
  --s-12: 3rem;     /* 48 px */
  --s-16: 4rem;     /* 64 px */
  --s-20: 5rem;     /* 80 px */
  --s-24: 6rem;     /* 96 px */
  --s-32: 8rem;     /* 128 px */
  --s-40: 10rem;    /* 160 px */
  --s-48: 12rem;    /* 192 px */
  --s-56: 14rem;    /* 224 px */
  --s-64: 16rem;    /* 256 px */

  /**
   * Font Size Definitions
   */
  --text-base:  1rem;     /* 16 px */
  --text-lg:    1.125rem; /* 18 px */
  --text-xl:    1.25rem;  /* 20 px */
  --text-2xl:   1.5rem;   /* 24 px */
  --text-3xl:   1.875rem; /* 30 px */
  --text-4xl:   2.25rem;  /* 36 px */
  --text-5xl:   3rem;     /* 48 px */
  --text-6xl:   4rem;     /* 64 px */

  --text-title-pre: 24px;
  --text-title: 40px;
  --text-title-post: 30px;

  --text-header: 40px;
  --text-subheader: 20px;

  --text: 16px;

  --text-skill-cards: 20px;


  /**
   * Color Definitions
   */

  --primary-color: #F26B3C;
  --bg-color: #1F2233;
  --bg-color-alt: #24283D;
  --text-color: #FBF4E0;

  --social-color: #4E5683;
  --social-bg: #1F2233;

  --skills-bg: #404562;
  --skills-card-bg: #24283D;

  --button-bg: #393E56;
  --button-hover: var(--primary-color);

  --featured-head: #FFF;
  --featured-bg: #383E61;

  --timeline-bg: #858399;
  --timeline-entry-bg: #24283D;
}

body {
  font-family: 'Roboto', sans-serif;
  background-color: var(--bg-color);
  color: var(--text-color);
}

img {
  display: block;
  width: 100%;
}

section {
  padding-top: 100px;
  padding-bottom: 130px;
}

section > p {
  padding-left: 15px;
  padding-right: 15px;
}

section > img {
  margin-top: 40px;
}

h1, h2{
  font-size: var(--text-header);
  margin-top: 0;
}

p {
  font-size: var(--text);
}

.subtitle {
  font-size: var(--text-subheader);
  color: var(--primary-color);
  margin-bottom: 0;
}

.container {
  margin: 0 auto;
  padding-left: 15px;
  padding-right: 15px;
}

button {
  display: block;
  border: none;
  margin: 0;
  padding: .5rem 1rem;
  cursor: pointer;
  text-align: center;
}

.hidden {
  display: none;
}

.socialMediaIcons a,
.socialMediaIcons a:visited {
  color: var(--social-bg);
}

.socialMediaIcons .far {
  color: var(--text-color);
}

.socialMediaIcons .fa-inverse {
  color: var(--social-color);
}

.socialMediaIcons a:hover .fa-inverse {
  color: var(--primary-color);
}

.socialMediaIcons {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;

  font-size: 20px;
  list-style-type: none;
  padding: 0;
}

